--- a/SWD607_Assignment2/Resources/layout/Profile.xml
+++ b/SWD607_Assignment2/Resources/layout/Profile.xml
@@ -5,6 +5,8 @@
     android:background="@android:color/white"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent">
+
+    <!-- Company Logo -->
     <ImageView
         android:id="@+id/imageViewLogo"
         android:layout_width="163dp"
@@ -14,6 +16,8 @@
         android:contentDescription="@string/imageViewLogo"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="1dp"/>
+
+    <!-- Heading -->
     <TextView
         android:layout_width="match_parent"
         android:text="@string/company_name"
@@ -23,8 +27,7 @@
         android:textColor="@android:color/background_dark"
         android:textSize="40dp"
         android:textStyle="bold"    
-        android:layout_marginTop="150dp"
-        />
+        android:layout_marginTop="150dp"/>
     <TextView
         android:layout_width="match_parent"
         android:text="@string/company_subname"
@@ -33,8 +36,9 @@
         android:textSize="20dp"
         android:textColor="@android:color/background_dark"
         android:id="@+id/txt1"
-        android:layout_marginTop="210dp"
-        />
+        android:layout_marginTop="210dp"/>
+
+    <!-- Profile Title -->
     <TextView
         android:layout_width="match_parent"
         android:text="@string/my_profile"
@@ -44,8 +48,9 @@
         android:textColor="@android:color/background_dark"
         android:id="@+id/txtAccount"
         android:layout_marginTop="240dp"
-        android:textStyle="bold" 
-        />
+        android:textStyle="bold"/>
+
+    <!-- Username -->
     <EditText
         android:layout_width="match_parent"
         android:layout_height="60dp"
@@ -59,8 +64,9 @@
         android:textColorHint="@android:color/darker_gray"
         android:hint="@string/enter_username"
         android:background="@drawable/white_button_border" 
-        android:layout_marginTop="320dp"
-        />
+        android:layout_marginTop="320dp"/>
+
+    <!-- Password -->
     <EditText
         android:layout_width="match_parent"
         android:layout_height="60dp"
@@ -74,97 +80,99 @@
         android:hint="@string/password_hint"
         android:textColorHint="@android:color/darker_gray"
         android:background="@drawable/white_button_border"
-        android:layout_marginTop="400dp"
-        />
+        android:layout_marginTop="400dp"/>
+
+        <!-- First Name and Last Name-->
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:layout_below="@+id/txtPassword">
-        <EditText
-            android:id="@+id/editTextFirstName"
-            android:layout_width="230dp"
-            android:layout_height="60dp"
-            android:hint="@string/first_name"
-            android:inputType="text"
-            android:paddingStart="15dp"
-            android:textColorHint="@android:color/darker_gray"
-            android:background="@drawable/white_button_border"
-            android:textSize="25sp"
-            android:layout_marginTop="20dp"
-            android:layout_marginStart="20dp"/>
+            <EditText
+                android:id="@+id/editTextFirstName"
+                android:layout_width="230dp"
+                android:layout_height="60dp"
+                android:hint="@string/first_name"
+                android:inputType="text"
+                android:paddingStart="15dp"
+                android:textColorHint="@android:color/darker_gray"
+                android:background="@drawable/white_button_border"
+                android:textSize="25sp"
+                android:layout_marginTop="20dp"
+                android:layout_marginStart="20dp"/>
 
-        <EditText
-            android:id="@+id/editTextLastName"
-            android:layout_width="317.5dp"
-            android:layout_height="60dp"
-            android:hint="@string/last_name"
-            android:inputType="text"
-            android:layout_toRightOf="@+id/editTextFirstName"
-            android:textColorHint="@android:color/darker_gray"
-            android:background="@drawable/white_button_border"
-            android:textSize="25sp"
-            android:paddingStart="15dp"
-            android:layout_marginTop="20dp"
-            android:layout_marginStart="10dp"/>
+            <EditText
+                android:id="@+id/editTextLastName"
+                android:layout_width="317.5dp"
+                android:layout_height="60dp"
+                android:hint="@string/last_name"
+                android:inputType="text"
+                android:layout_toRightOf="@+id/editTextFirstName"
+                android:textColorHint="@android:color/darker_gray"
+                android:background="@drawable/white_button_border"
+                android:textSize="25sp"
+                android:paddingStart="15dp"
+                android:layout_marginTop="20dp"
+                android:layout_marginStart="10dp"/>
         </RelativeLayout>
+
+        <!-- Mobile Number -->
         <EditText
-        android:layout_width="match_parent"
-        android:layout_height="60dp"
-        android:textSize="25dp"
-        android:inputType="phone"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        android:paddingStart="15dp"
-        android:textColor="@android:color/background_dark"
-        android:id="@+id/txtPhone"
-        android:hint="@string/mobile_number"
-        android:textColorHint="@android:color/darker_gray"
-        android:background="@drawable/white_button_border"
-        android:layout_marginTop="560dp"
-        />
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            android:textSize="25dp"
+            android:inputType="phone"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
+            android:paddingStart="15dp"
+            android:textColor="@android:color/background_dark"
+            android:id="@+id/txtPhone"
+            android:hint="@string/mobile_number"
+            android:textColorHint="@android:color/darker_gray"
+            android:background="@drawable/white_button_border"
+            android:layout_marginTop="560dp"/>
 
-    <EditText
-        android:layout_width="match_parent"
-        android:layout_height="60dp"
-        android:textSize="25dp"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        android:inputType="textEmailAddress"
-        android:textColor="@android:color/background_dark"
-        android:id="@+id/txtEmail"
-        android:hint="@string/email_address"
-        android:paddingStart="15dp"
-        android:textColorHint="@android:color/darker_gray"
-        android:background="@drawable/white_button_border"
-        android:layout_marginTop="640dp"
-        />
+        <!-- Email Address -->
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            android:textSize="25dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
+            android:inputType="textEmailAddress"
+            android:textColor="@android:color/background_dark"
+            android:id="@+id/txtEmail"
+            android:hint="@string/email_address"
+            android:paddingStart="15dp"
+            android:textColorHint="@android:color/darker_gray"
+            android:background="@drawable/white_button_border"
+            android:layout_marginTop="640dp"/>
 
+    <!-- Update Button -->
     <Button
         android:layout_width="260dp"
         android:layout_height="80dp"
         android:id="@+id/btnUpdate"
         android:layout_marginTop="725dp"
-        android:layout_marginLeft="20dp"
+        android:layout_marginLeft="25dp"
         android:background="@drawable/white_button_border"
         android:text="@string/update_button"
         android:textSize="25dp"
         android:textColor="@android:color/background_dark"
-        android:textAllCaps="false"     
-        />
+        android:textAllCaps="false"/>
+
+    <!-- Delete Button -->
     <Button
         android:layout_width="260dp"
         android:layout_height="80dp"
         android:id="@+id/btnDeleteAccount"  
         android:layout_marginTop="725dp"
-        android:layout_marginLeft="320dp"
+        android:layout_marginLeft="315dp"
         android:background="@drawable/light_blue_color_round"
         android:text="@string/delete_account"
         android:textSize="25dp"
         android:textColor="@android:color/white"
         android:textAllCaps="false"/>
-
-
 
 </RelativeLayout>
     
