--- a/SWD607_Assignment2/Resources/layout/Reservation.xml
+++ b/SWD607_Assignment2/Resources/layout/Reservation.xml
@@ -41,6 +41,7 @@
         android:layout_marginEnd="40dp"
         android:background="@drawable/gray_button" />
 
+    <!-- Add and Edit Button -->
     <Button
         android:id="@+id/buttonAddEdit"
         android:layout_width="match_parent"
@@ -58,6 +59,7 @@
         android:layout_centerHorizontal="true"
         android:textAllCaps="false"/>
 
+    <!-- Delete Button -->
     <Button
         android:id="@+id/buttonDelete"
         android:layout_width="match_parent"
