--- a/SWD607_Assignment2/Resources/layout/SignUp.xml
+++ b/SWD607_Assignment2/Resources/layout/SignUp.xml
@@ -4,6 +4,7 @@
     android:layout_height="match_parent"    
     android:background="@android:color/white">
 
+    <!-- Company Logo -->
     <ImageView
         android:id="@+id/imageViewLogo"
         android:layout_width="163dp"
@@ -22,8 +23,7 @@
         android:textColor="@android:color/background_dark"
         android:textSize="40dp"
         android:textStyle="bold"    
-        android:layout_marginTop="150dp"
-        />
+        android:layout_marginTop="150dp"/>
     <TextView
         android:layout_width="match_parent"
         android:text="@string/company_subname"
@@ -32,10 +32,9 @@
         android:textSize="20dp"
         android:textColor="@android:color/background_dark"
         android:id="@+id/txt1"
-        android:layout_marginTop="210dp"
-        />
+        android:layout_marginTop="210dp"/>
 
-
+    <!-- Register Now Title -->
     <TextView
         android:id="@+id/textViewMyAccount"
         android:layout_width="wrap_content"
@@ -46,8 +45,7 @@
         android:textColor="@android:color/black"       
         android:layout_below="@+id/txt1"
         android:layout_marginTop="20dp"
-        android:paddingStart="40dp"
-        />
+        android:paddingStart="40dp"/>
 
     <!-- Username EditText -->
     <EditText
@@ -87,6 +85,7 @@
             android:orientation="horizontal"
             android:layout_below="@+id/editTextPassword">          
 
+            <!-- First Name -->
             <EditText
                 android:id="@+id/editTextFirstName"
                 android:layout_width="240dp"
@@ -100,6 +99,7 @@
                 android:layout_marginTop="10dp"
                 android:layout_marginStart="40dp"/>
 
+            <!-- Last Name -->
             <EditText
                 android:id="@+id/editTextLastName"
                 android:layout_width="270dp"
@@ -114,6 +114,7 @@
                 android:layout_marginTop="10dp"
                 android:layout_marginStart="10dp"/>
 
+             <!-- Mobile Number -->
              <EditText
                 android:id="@+id/editTextMobileNumber"
                 android:layout_width="match_parent"
@@ -128,6 +129,8 @@
                 android:layout_marginTop="10dp"        
                 android:layout_marginStart="40dp"
                 android:layout_marginEnd="40dp" />
+
+            <!-- Email Address -->
             <EditText
                 android:id="@+id/editTextEmailAddress"
                 android:layout_width="match_parent"
@@ -143,6 +146,7 @@
                 android:layout_marginStart="40dp"
                 android:layout_marginEnd="40dp" />
     
+            <!-- Submit Button -->
             <Button
                 android:id="@+id/buttonSubmit"
                 android:layout_width="match_parent"
