--- a/SWD607_Assignment2/Resources/layout/Menu.xml
+++ b/SWD607_Assignment2/Resources/layout/Menu.xml
@@ -6,6 +6,18 @@
 
     <!-- Next Button -->
     <ImageButton
+        android:id="@+id/adminbtn"        
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"        
+        android:src="@drawable/profile_button_image"
+        android:textColor="@android:color/black"
+        android:background="@android:color/transparent"
+        android:contentDescription="@string/imageViewLogo"
+        android:layout_alignParentStart="true"       
+        android:layout_marginEnd="40dp"
+        android:layout_marginTop="16dp"/>
+
+    <ImageButton
         android:id="@+id/buttonCart"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
