--- a/SWD607_Assignment2/Resources/layout/Menu.xml
+++ b/SWD607_Assignment2/Resources/layout/Menu.xml
@@ -8,12 +8,13 @@
     <ImageButton
         android:id="@+id/adminbtn"        
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"        
-        android:src="@drawable/profile_button_image"
+        android:layout_height="wrap_content"       
+        android:src="@drawable/admin_logo2"
         android:textColor="@android:color/black"
         android:background="@android:color/transparent"
         android:contentDescription="@string/imageViewLogo"
-        android:layout_alignParentStart="true"       
+        android:layout_alignParentStart="true"
+        android:layout_marginStart="15dp"
         android:layout_marginEnd="40dp"
         android:layout_marginTop="16dp"/>
 
