--- a/SWD607_Assignment2/Resources/layout/Profile.xml
+++ b/SWD607_Assignment2/Resources/layout/Profile.xml
@@ -51,7 +51,7 @@
         android:textStyle="bold"/>
 
     <!-- Username -->
-    <EditText
+    <TextView
         android:layout_width="match_parent"
         android:layout_height="60dp"
         android:textSize="25dp"
@@ -67,7 +67,7 @@
         android:layout_marginTop="320dp"/>
 
     <!-- Password -->
-    <EditText
+    <TextView
         android:layout_width="match_parent"
         android:layout_height="60dp"
         android:textSize="25dp"
@@ -88,7 +88,7 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:layout_below="@+id/txtPassword">
-            <EditText
+            <TextView
                 android:id="@+id/editTextFirstName"
                 android:layout_width="230dp"
                 android:layout_height="60dp"
@@ -101,7 +101,7 @@
                 android:layout_marginTop="20dp"
                 android:layout_marginStart="20dp"/>
 
-            <EditText
+            <TextView
                 android:id="@+id/editTextLastName"
                 android:layout_width="317.5dp"
                 android:layout_height="60dp"
@@ -117,7 +117,7 @@
         </RelativeLayout>
 
         <!-- Mobile Number -->
-        <EditText
+        <TextView
             android:layout_width="match_parent"
             android:layout_height="60dp"
             android:textSize="25dp"
@@ -133,7 +133,7 @@
             android:layout_marginTop="560dp"/>
 
         <!-- Email Address -->
-        <EditText
+        <TextView
             android:layout_width="match_parent"
             android:layout_height="60dp"
             android:textSize="25dp"
