--- a/SWD607_Assignment2/Resources/layout/Profile_Update.xml
+++ b/SWD607_Assignment2/Resources/layout/Profile_Update.xml
@@ -64,7 +64,7 @@
         android:textStyle="bold"/>
 
     <!-- Username -->
-    <TextView
+    <EditText
         android:layout_width="match_parent"
         android:layout_height="60dp"
         android:textSize="25dp"
@@ -81,7 +81,7 @@
         android:layout_marginTop="320dp"/>
 
     <!-- Password -->
-    <TextView
+    <EditText
         android:layout_width="match_parent"
         android:layout_height="60dp"
         android:textSize="25dp"
@@ -103,21 +103,21 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:layout_below="@+id/txtPassword">
-            <TextView
+            <EditText
                 android:id="@+id/editTextFirstName"
                 android:layout_width="230dp"
                 android:layout_height="60dp"
                 android:hint="@string/first_name"
                 android:inputType="text"
                 android:paddingStart="15dp"
-            android:gravity="center_vertical"
+                android:gravity="center_vertical"
                 android:textColorHint="@android:color/darker_gray"
                 android:background="@drawable/white_button_border"
                 android:textSize="25sp"
                 android:layout_marginTop="20dp"
                 android:layout_marginStart="20dp"/>
 
-            <TextView
+            <EditText
                 android:id="@+id/editTextLastName"
                 android:layout_width="317.5dp"
                 android:layout_height="60dp"
@@ -134,7 +134,7 @@
         </RelativeLayout>
 
         <!-- Mobile Number -->
-        <TextView
+        <EditText
             android:layout_width="match_parent"
             android:layout_height="60dp"
             android:textSize="25dp"
@@ -151,7 +151,7 @@
             android:layout_marginTop="560dp"/>
 
         <!-- Email Address -->
-        <TextView
+        <EditText
             android:layout_width="match_parent"
             android:layout_height="60dp"
             android:textSize="25dp"
@@ -168,30 +168,21 @@
             android:layout_marginTop="640dp"/>
 
     <!-- Update Button -->
-    <Button
-        android:layout_width="260dp"
-        android:layout_height="80dp"
-        android:id="@+id/btnUpdate"
-        android:layout_marginTop="725dp"
-        android:layout_marginLeft="25dp"
-        android:background="@drawable/white_button_border"
-        android:text="@string/update_button"
-        android:textSize="25dp"
-        android:textColor="@android:color/background_dark"
-        android:textAllCaps="false"/>
-
-    <!-- Delete Button -->
-    <Button
-        android:layout_width="260dp"
-        android:layout_height="80dp"
-        android:id="@+id/btnDeleteAccount"  
-        android:layout_marginTop="725dp"
-        android:layout_marginLeft="315dp"
-        android:background="@drawable/light_blue_color_round"
-        android:text="@string/delete_account"
-        android:textSize="25dp"
-        android:textColor="@android:color/white"
-        android:textAllCaps="false"/>
+            <Button
+                android:id="@+id/buttonSend"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/update_button"
+                android:textSize="30sp"
+                android:textStyle="bold"
+                android:background="@drawable/gray_button"
+                android:textColor="@android:color/white"
+                android:padding="8dp"
+                android:layout_margin="20dp"
+                android:layout_marginTop="20dp"
+                android:layout_centerHorizontal="true"
+                android:layout_below="@+id/txtEmail"
+                android:textAllCaps="false"/>
 
 </RelativeLayout>
     
