--- a/SWD607_Assignment2/Resources/layout/Profile_Update.xml
+++ b/SWD607_Assignment2/Resources/layout/Profile_Update.xml
@@ -171,9 +171,9 @@
             <Button
                 android:id="@+id/buttonSend"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="80dp"
                 android:text="@string/update_button"
-                android:textSize="30sp"
+                android:textSize="35sp"
                 android:textStyle="bold"
                 android:background="@drawable/gray_button"
                 android:textColor="@android:color/white"
