--- a/SWD607_Assignment2/Resources/layout/AddEdit.xml
+++ b/SWD607_Assignment2/Resources/layout/AddEdit.xml
@@ -4,31 +4,30 @@
     android:layout_height="match_parent"
     android:background="@android:color/white">
 
+     <!-- Back Button -->
+    <ImageButton
+        android:id="@+id/buttonBack"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/back_button_image"
+        android:textColor="@android:color/black"
+        android:background="@android:color/transparent"
+        android:contentDescription="@string/imageViewLogo"
+        android:layout_alignParentStart="true"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"/>
+
     <ScrollView
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:layout_below="@id/buttonBack">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:background="@android:color/white"
-            android:padding="2dp">
-
-           
-
-            <!-- Back Button -->
-            <ImageButton
-                android:id="@+id/buttonBack"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/back_button_image"
-                android:textColor="@android:color/black"
-                android:background="@android:color/transparent"
-                android:contentDescription="@string/imageViewLogo"
-                android:layout_alignParentStart="true"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="16dp"/>
+            android:padding="2dp">                    
 
             <!-- Title : Make Reservation -->
             <TextView
@@ -41,7 +40,7 @@
                 android:textColor="@android:color/black"
                 android:layout_gravity="center"                
                 android:layout_marginStart="20dp"
-                android:layout_marginTop="20dp" />
+                android:layout_marginTop="10dp" />
 
             <TextView
                 android:id="@+id/textAucklandRangers"
@@ -82,7 +81,7 @@
                     android:layout_height="wrap_content"
                     android:text="Table"
                     android:paddingStart="16dp"
-                    android:textSize="25sp"
+                    android:textSize="30sp"
                     android:textStyle="bold"
                     android:textColor="@android:color/black"
                     android:layout_gravity="start|center_vertical" />
@@ -120,14 +119,18 @@
                 android:id="@+id/timePicker1" />
 
             <!-- ListView -->
-            <ListView
-                android:id="@+id/listView3"
-                android:layout_width="match_parent"
+            <TextView
+                android:id="@+id/textView38"
+                android:layout_width="800dp"
                 android:layout_height="350dp"
                 android:layout_below="@+id/timePicker1"
-                android:layout_marginTop="1dp"
-                android:layout_marginStart="40dp"
-                android:layout_marginEnd="40dp"
+                android:textColor="@android:color/black"
+                android:textSize="30sp"
+                android:textStyle="bold"
+                android:paddingStart="20dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginStart="20dp"
+                android:layout_marginEnd="20dp"
                 android:background="@drawable/gray_button" />
 
             <Button
@@ -143,7 +146,7 @@
                 android:layout_marginStart="40dp"
                 android:layout_marginEnd="40dp"
                 android:layout_marginTop="50dp"
-                android:layout_below="@+id/listView3"
+                android:layout_below="@+id/textView38"
                 android:layout_centerHorizontal="true"
                 android:textAllCaps="false"/>
 
