--- a/SWD607_Assignment2/Resources/layout/AddEdit.xml
+++ b/SWD607_Assignment2/Resources/layout/AddEdit.xml
@@ -118,7 +118,7 @@
                 android:layout_below="@+id/datePicker1"
                 android:id="@+id/timePicker1" />
 
-            <!-- ListView -->
+            <!-- TextView -->
             <TextView
                 android:id="@+id/textView38"
                 android:layout_width="800dp"
@@ -128,9 +128,10 @@
                 android:textSize="30sp"
                 android:textStyle="bold"
                 android:paddingStart="20dp"
+                android:paddingTop="10dp"
                 android:layout_marginTop="10dp"
                 android:layout_marginStart="20dp"
-                android:layout_marginEnd="20dp"
+                android:layout_marginEnd="20dp"                                  
                 android:background="@drawable/gray_button" />
 
             <Button
@@ -165,9 +166,7 @@
                 android:layout_marginTop="30dp"
                 android:layout_below="@+id/buttonAdd"
                 android:layout_centerHorizontal="true"
-                android:textAllCaps="false"/> 
-
-           
+                android:textAllCaps="false"/>          
 
         </RelativeLayout>
 
