--- a/SWD607_Assignment2/Resources/layout/Reservation.xml
+++ b/SWD607_Assignment2/Resources/layout/Reservation.xml
@@ -36,13 +36,13 @@
         android:layout_width="match_parent"
         android:layout_height="490dp"
         android:layout_below="@id/textViewReservation"
-        android:textColor="@android:color/white"
-        android:textSize="25sp"
+        android:textColor="@android:color/black"
+        android:textSize="30sp"
         android:textStyle="bold"
         android:layout_marginTop="10dp"
         android:layout_marginStart="40dp"
         android:layout_marginEnd="40dp"
-        android:background="@drawable/white_button_border" />
+        android:background="@drawable/gray_button" />
 
     <!-- Add and Edit Button -->
     <Button
